Correct some colors

--- a/index.html
+++ b/index.html
@@ -311,8 +311,11 @@
         </div>
 
         <div class="products-cta">
-            <p>Looking for custom cereal solutions? We can help!</p>
-            <a href="#contact" class="btn">Contact Our Team</a>
+            <p>Looking for custom cereal solutions? Let's create something amazing together!</p>
+            <a href="https://www.cerealis.pt/index.php/contacts/?lang=en" class="btn" target="_blank">
+                Contact Our Team
+                <i class="fas fa-arrow-right"></i>
+            </a>
         </div>
     </section>
 
