Improve other product categories section

--- a/index.html
+++ b/index.html
@@ -218,6 +218,8 @@
             </div>
 
             <div class="category business-units">
+                <h3>Other Product Categories</h3>
+                <p class="category-intro">Beyond breakfast cereals, we excel in producing a wide range of food products in our state-of-the-art facilities.</p>
                 <div class="product-grid">
                     <div class="product-card pasta">
                         <div class="vertical-text">PASTA</div>
