--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
 </head>
 <body>
     <nav class="navbar">
+        <a href="https://cerealis.pt" target="_blank" class="nav-logo-container">
+            <img src="assets/LogoCEREALIS_Cores_Transp.png" alt="Cerealis Logo" class="nav-logo">
+        </a>
         <button class="hamburger" aria-label="Toggle menu">
             <span></span>
             <span></span>
@@ -110,6 +113,9 @@
     </nav>
 
     <header class="banner" id="home">
+        <a href="https://cerealis.pt" target="_blank" class="banner-logo mobile-only">
+            <img src="assets/LogoCEREALIS_Branco_Transp.png" alt="Cerealis Logo" class="banner-logo-img">
+        </a>
         <video class="banner-video" autoplay muted loop playsinline poster="assets/images/banner-poster.jpg" data-src="assets/videos/Ambicao-Cerealis.webm">
             <source data-src="assets/videos/Ambicao-Cerealis.webm" type="video/webm">
             <source data-src="assets/videos/Ambicao-Cerealis.mov" type="video/quicktime">
