Improvement on the packing option, might need to be removed

--- a/index.html
+++ b/index.html
@@ -299,22 +299,35 @@
 
             <div class="category">
                 <h3>Packaging Solutions</h3>
+                <p class="category-intro">We handle all aspects of packaging, offering flexible solutions to meet your brand requirements.</p>
                 <div class="packaging-options">
                     <div class="package-type">
-                        <i class="fas fa-box-open"></i>
-                        <span>Cardboard Boxes</span>
+                        <i class="fas fa-box"></i>
+                        <div class="package-info">
+                            <span class="package-name">Premium Boxes</span>
+                            <span class="package-detail">Customizable sizes & designs</span>
+                        </div>
                     </div>
                     <div class="package-type">
-                        <i class="fas fa-shopping-bag"></i>
-                        <span>Pillow Bags with Print</span>
+                        <i class="fas fa-bag-shopping"></i>
+                        <div class="package-info">
+                            <span class="package-name">Stand-up Pouches</span>
+                            <span class="package-detail">With or without custom printing</span>
+                        </div>
                     </div>
                     <div class="package-type">
-                        <i class="fas fa-shopping-bag"></i>
-                        <span>Pillow Bags without Print</span>
+                        <i class="fas fa-box-archive"></i>
+                        <div class="package-info">
+                            <span class="package-name">Bulk Packaging</span>
+                            <span class="package-detail">Industrial & wholesale options</span>
+                        </div>
                     </div>
                     <div class="package-type">
-                        <i class="fas fa-square"></i>
-                        <span>False Bottom Square</span>
+                        <i class="fas fa-recycle"></i>
+                        <div class="package-info">
+                            <span class="package-name">Eco-friendly Options</span>
+                            <span class="package-detail">Sustainable materials available</span>
+                        </div>
                     </div>
                 </div>
             </div>
