Fix carousel images

--- a/index.html
+++ b/index.html
@@ -161,51 +161,59 @@
                                 <img src="assets/images/cereals/cookie-thumb.png" alt="Cookie cereals" class="cereal-thumbnail" loading="lazy">
                                 <span>Cookie cereals</span>
                             </div>
-                            <div class="cereal-item" data-cereal="chocolate">
-                                <img src="assets/images/cereals/choco-rice-thumb.png" alt="Chocolate-flavored cereals" class="cereal-thumbnail" loading="lazy">
-                                <span>Chocolate-flavored cereals</span>
+                            <div class="cereal-item" data-cereal="cocoa-curls">
+                                <img src="assets/images/cereals/cocoa-curls-thumb.png" alt="Cocoa curls" class="cereal-thumbnail" loading="lazy">
+                                <span>Cocoa curls</span>
                             </div>
-                            <div class="cereal-item" data-cereal="honey">
-                                <img src="assets/images/cereals/honey-squares-thumb.png" alt="Honey-flavored squares" class="cereal-thumbnail" loading="lazy">
-                                <span>Honey-flavored squares</span>
-                            </div>
-                            <div class="cereal-item" data-cereal="filled">
-                                <img src="assets/images/cereals/filled-pillows-thumb.png" alt="Filled pillows" class="cereal-thumbnail" loading="lazy">
-                                <span>Filled pillows</span>
+                            <div class="cereal-item" data-cereal="balls">
+                                <img src="assets/images/cereals/balls-thumb.png" alt="Balls" class="cereal-thumbnail" loading="lazy">
+                                <span>Balls</span>
                             </div>
                             <div class="cereal-item" data-cereal="loops">
-                                <img src="assets/images/cereals/loops-thumb.png" alt="Loops and balls" class="cereal-thumbnail" loading="lazy">
-                                <span>Loops and balls</span>
+                                <img src="assets/images/cereals/loops-thumb.png" alt="Loops" class="cereal-thumbnail" loading="lazy">
+                                <span>Loops</span>
+                            </div>
+                            <div class="cereal-item" data-cereal="honey-squares">
+                                <img src="assets/images/cereals/honey-squares-thumb.png" alt="Honey squares" class="cereal-thumbnail" loading="lazy">
+                                <span>Honey squares</span>
+                            </div>
+                            <div class="cereal-item" data-cereal="filled-pillows">
+                                <img src="assets/images/cereals/filled-pillows-thumb.png" alt="Filled pillows" class="cereal-thumbnail" loading="lazy">
+                                <span>Filled pillows</span>
                             </div>
                         </div>
 
                         <div class="cereal-list hidden" id="classic-cereals">
-                            <div class="cereal-item" data-cereal="corn-flakes">
+                            <div class="cereal-item" data-cereal="cornflakes">
                                 <img src="assets/images/cereals/cornflakes-thumb.png" alt="Corn flakes" class="cereal-thumbnail">
                                 <span>Corn flakes</span>
                             </div>
-                            <div class="cereal-item" data-cereal="bran">
-                                <img src="assets/images/cereals/branflakes-thumb.png" alt="Bran/Wheat flakes" class="cereal-thumbnail">
-                                <span>Bran/Wheat flakes</span>
+                            <div class="cereal-item" data-cereal="bran-flakes">
+                                <img src="assets/images/cereals/branflakes-thumb.png" alt="Bran flakes" class="cereal-thumbnail">
+                                <span>Bran flakes</span>
                             </div>
-                            <div class="cereal-item" data-cereal="rice">
-                                <img src="assets/images/cereals/rice-flakes-thumb.png" alt="Rice/Wheat flakes" class="cereal-thumbnail">
-                                <span>Rice/Wheat flakes</span>
-                            </div>
-                            <div class="cereal-item" data-cereal="crispies">
-                                <img src="assets/images/cereals/rice-crispies-thumb.png" alt="Rice crispies" class="cereal-thumbnail">
-                                <span>Rice crispies</span>
+                            <div class="cereal-item" data-cereal="bransticks">
+                                <img src="assets/images/cereals/bransticks-thumb.png" alt="Bran sticks" class="cereal-thumbnail">
+                                <span>Bran sticks</span>
                             </div>
                             <div class="cereal-item" data-cereal="granola">
-                                <img src="assets/images/cereals/bransticks-thumb.png" alt="Granola & Muesli" class="cereal-thumbnail">
-                                <span>Granola & Muesli</span>
+                                <img src="assets/images/cereals/granola.png" alt="Granola & muesli" class="cereal-thumbnail">
+                                <span>Granola & muesli</span>
+                            </div>
+                            <div class="cereal-item" data-cereal="rice-flakes">
+                                <img src="assets/images/cereals/rice-flakes-thumb.png" alt="Rice flakes" class="cereal-thumbnail">
+                                <span>Rice flakes</span>
+                            </div>
+                            <div class="cereal-item" data-cereal="rice-crispies">
+                                <img src="assets/images/cereals/rice-crispies-thumb.png" alt="Rice crispies" class="cereal-thumbnail">
+                                <span>Rice crispies</span>
                             </div>
                         </div>
                     </div>
 
                     <div class="cereal-display">
                         <div class="cereal-image-container">
-                            <img src="assets/images/cereals/star-shaped-thumb.png" alt="Selected cereal" id="selected-cereal-image">
+                            <img src="assets/images/cereals/star-shaped.png" alt="Selected cereal" id="selected-cereal-image">
                             <div class="cereal-nav">
                                 <button class="nav-btn prev" aria-label="Previous cereal">
                                     <i class="fas fa-chevron-left"></i>
